# nice-quantity

./: Cargo.toml  README.md
src/: fmt.rs  lib.rs  seconds.rs  to_microseconds.rs  to_milliseconds.rs
